<resources>
    <string name="app_name">GestStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_stores">Lojas</string>
    <string name="menu_store_management">Gestão de Lojas</string>
    <string name="menu_items">Items</string>
    <string name="menu_suppliers">Fornecedores</string>
    <string name="menu_orders">Encomendas</string>
</resources>