<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_stores"
            android:title="@string/menu_stores"/>
        <item
            android:id="@+id/nav_store_management"
            android:title="@string/menu_store_management"/>
        <item
            android:id="@+id/nav_items"
            android:title="@string/menu_items" />
        <item
            android:id="@+id/nav_suppliers"
            android:title="@string/menu_suppliers" />
        <item
            android:id="@+id/nav_orders"
            android:title="@string/menu_orders" />
    </group>
</menu>